# RayanSkills

./: .gitignore  CLAUDE.md  README.md
.rayanskills/: state.json
docs/linux-cpp-executables/cpp-exe-versioning/: TASKS.md
docs/linux-cpp-executables/cpp-exe-versioning/adr/: 0001-semantic-versioning-mechanism-for-cpp-executables.md
docs/linux-cpp-executables/cpp-exe-versioning/tests/: README.md  evals.json
docs/linux-cpp-executables/cpp-exe-versioning/tests/iteration-1/eval-0-bootstrap-cross-sysroot/without_skill/outputs/: CMakeLists.txt  git_state.txt  main.cpp
docs/linux-cpp-executables/cpp-exe-versioning/tests/iteration-1/eval-0-bootstrap-cross-sysroot/without_skill/outputs/cmake/: GenerateVersionHeader.cmake  GetVersionFromGit.cmake  version.h.in
docs/linux-shared-libraries/: TASKS.md
docs/linux-shared-libraries/linux-abi-management/: TASKS.md
docs/linux-shared-libraries/linux-abi-management/adr/: 001_linux_abi_management_skill_architecture.md
docs/linux-shared-libraries/linux-shared-library-release/: TASKS.md  provenance.md
docs/linux-shared-libraries/linux-shared-library-release/adr/: 0001-standalone-so-release-skill.md
docs/linux-shared-libraries/linux-shared-library-release/artifacts/: README.md  description-trigger-eval.json  evals.json
docs/linux-shared-libraries/linux-shared-library-versioning/: TASKS.md
docs/linux-shared-libraries/linux-shared-library-versioning/adr/: 001_linux_shared_library_versioning_skill_architecture.md
skills/linux-cpp-executables/cpp-exe-versioning/: SKILL.md
skills/linux-cpp-executables/cpp-exe-versioning/references/: dependency-file.md
skills/linux-shared-libraries/linux-abi-management/: SKILL.md
skills/linux-shared-libraries/linux-shared-library-release/: README.md  SKILL.md
skills/linux-shared-libraries/linux-shared-library-versioning/: SKILL.md
(+75 files in other folders)
